Remove left position to fix issue with right alignment

--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -11,7 +11,6 @@
   visibility: hidden;
   position: absolute;
   top: 0px;
-  left: 0px;
   z-index: 1;
   > li{
     width: 100%;
